# orca-os

./: .claude-orchestration-context.md  .claude-session-context.md  .eslintrc.cjs  .gitignore  .gitmodules  .htmlvalidate.json  .mcp.json  .stylelintrc.cjs  .tweak_verified  .verified  AGENTS.md  AUTO_ORCHESTRATION_ARCHITECTURE.md  CLAUDE.md  CLAUDE.md.global-copy  CLAUDE_CODE_TEMPLATES_REMOVAL.md  DESIGN-COMMANDS-SIMPLIFIED.md  DOCS-REDESIGN-SUMMARY.md  IOS_WORKFLOW_FAILURES_ANALYSIS.md  Makefile  PLUGIN_CLEANUP_SUMMARY.md  QA_AUDIT_PLAN.md  QA_AUDIT_REPORT.md  QUICK_REFERENCE.md  README-old.md  README.md  SEO-ORCA.md  SESSION_LOG_DOCS_REDESIGN_2025-10-21.md  SETUP-SUMMARY.md  SYSTEM_ASSESSMENT_V2.md  claude-orca-feedback.md  new-builders-codex-11-15-25.md  settings.local.json  statusline.sh
.claude/: CLAUDE.md  README.md  mcp.json
.orchestration/: CLEANUP_AUDIT_2025-10-29.md  mode.json
.tmp-ws-test/: .verified
.workshop/: workshop.db  workshop.db-shm
agents/: a11y-enforcer.md  competitive-analyst.md  data-researcher.md  design-system-architect.md  design-token-guardian.md  expo-aesthetics-specialist.md  expo-architect-agent.md  expo-builder-agent.md  frontend-builder-agent.md  frontend-concept-agent.md  performance-enforcer.md  performance-prophet.md  python-analytics-expert.md  (+2 more)
mcp/workshop-cli/: QUICKSTART.md  README.md  VERIFICATION.md  pyproject.toml
mcp/workshop-cli/claude_workshop/: __init__.py  cli.py  db.py  import_jsonl.py  models.py  search.py
mcp/workshop-cli/claude_workshop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+1495 files in other folders)
